k8s/uat/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-uat-ratings
  namespace: student125-bookinfo-uat
  labels:
    app: bookinfo-uat-ratings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-uat-ratings
  template:
    metadata:
      labels:
        app: bookinfo-uat-ratings
    spec:
      containers:
      - name: bookinfo-uat-ratings
        image: ghcr.io/kenkenm43/bookinfo-ratings:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web-port
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
      imagePullSecrets:
      - name: registry-bookinfo
